Fix iPad landscape footer spacing. da258bbe5280784d355b6f9aad6486231aaf6184

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -999,7 +999,7 @@ body {
 (min-width: 58.125em) {
 	body {
 		--scroll--offset: calc(var(--tagline--height) + var(--margin--vertical) + var(--links--height));
-		--footer--spacing: calc(var(--inner-height, 100vh) - var(--colophon--height) - var(--margin--vertical) - var(--outro--height, var(--scroll--offset)));
+		--footer--spacing: calc(var(--inner-height, 100vh) - var(--colophon--height) - var(--margin--vertical) - var(--page--inset--bottom) - var(--outro--height, var(--scroll--offset)));
 	}
 }
 
